--- a/app/views/plans/swotedit.html.erb
+++ b/app/views/plans/swotedit.html.erb
@@ -1,72 +1,81 @@
-<table class="table table-borderless table-hover">
-  <caption class="hidden">Matriz SWOT</caption>
-  <thead>
-  <tr>
-    <th scope="col"></th>
-    <th scope="col">Fatores Positivos</th>
-    <th scope="col">Fatores Negativos</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <th scope="row" width="12%">Fatores Internos</th>
-    <td class="background-blue-light">
-      Forças
-      <hr/>
-      <%= render partial: "inputswotpart", locals: {tipo_do_swotpart: "strength", texto_da_acao: "+Força", swot_type: "Força"} %>
-      <% @strengths.each do |strength| %>
-        <div class="card-swot">
-          <strong><%= strength.name %></strong>
-          <%= link_to "Editar", edit_swotpart_path(strength), :class => "btn btn-primary" %>
-          <%= link_to "X", strength, method: :delete, :class => "btn btn-danger" %>
-        </div>
-      <% end %>
-    </td>
-    <td class="background-red-light">
-      Fraquezas
-      <hr/>
-      <%= render partial: "inputswotpart", locals: {tipo_do_swotpart: "weak", texto_da_acao: "+Fraqueza", swot_type: "Fraqueza"} %>
-      <% @weaks.each do |weak| %>
-        <div class="card-swot">
-          <strong><%= weak.name %></strong>
-          <%= link_to "Editar", edit_swotpart_path(weak), :class => "btn btn-primary" %>
-          <%= link_to "X", weak, method: :delete, :class => "btn btn-danger" %>
-        </div>
-      <% end %>
-    </td>
-  </tr>
-  <tr>
-    <th scope="row">Fatores Externos</th>
-    <td class="background-green-light">
-      Oportunidades
-      <hr/>
-      <%= render partial: "inputswotpart", locals: {tipo_do_swotpart: "opportunity", texto_da_acao: "+Oportunidade", swot_type: "Oportunidade"} %>
-      <% @opportunities.each do |opportunity| %>
-        <div class="card-swot">
-          <strong><%= opportunity.name %></strong>
-          <%= link_to "Editar", edit_swotpart_path(opportunity), :class => "btn btn-primary" %>
-          <%= link_to "X", opportunity, method: :delete, :class => "btn btn-danger" %>
-        </div>
-      <% end %>
-    </td>
-    <td class="background-orange-light">
-      Ameaças
-      <hr/>
-      <%= render partial: "inputswotpart", locals: {tipo_do_swotpart: "threat", texto_da_acao: "+Ameaça", swot_type: "Ameaça"} %>
-      <% @threats.each do |threat| %>
-        <div class="card-swot">
-          <strong><%= threat.name %></strong>
-          <%= link_to "Editar", edit_swotpart_path(threat), :class => "btn btn-primary" %>
-          <%= link_to "X", threat, method: :delete, :class => "btn btn-danger" %>
-        </div>
-      <% end %>
-    </td>
-  </tr>
-  </tbody>
-</table>
+<div class="container">
+  <h3 class="p-t-20 p-b-20">Análise Ambiental</h3>
+  <table class="table table-borderless table-hover">
+    <caption class="hidden">Análise Ambiental</caption>
+    <thead>
+    <tr>
+      <th scope="col"></th>
+      <th scope="col">Fatores Positivos</th>
+      <th scope="col">Fatores Negativos</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <th scope="row" width="12%">Fatores Internos</th>
+      <td class="background-blue-light">
+        <%= render partial: "inputswotpart", locals: {tipo_do_swotpart: "strength", texto_da_acao: "Força", swot_type: "Força"} %>
+        <% @strengths.each do |strength| %>
+          <div class="card-swot">
+            <div class="p-b-15">
+              <strong><%= strength.name %></strong>
+              <span class="align-right">
+              <%= link_to " ", edit_swotpart_path(strength), class: "btn btn-white lnr lnr-pencil" %>
+                <%= link_to " ", strength, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
+            </span>
+            </div>
+          </div>
+        <% end %>
+      </td>
+      <td class="background-red-light">
+        <%= render partial: "inputswotpart", locals: {tipo_do_swotpart: "weak", texto_da_acao: "Fraqueza", swot_type: "Fraqueza"} %>
+        <% @weaks.each do |weak| %>
+          <div class="card-swot">
+            <div class="p-b-15">
+              <strong><%= weak.name %></strong>
+              <span class="align-right">
+              <%= link_to " ", edit_swotpart_path(weak), class: "btn btn-white lnr lnr-pencil" %>
+                <%= link_to " ", weak, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
+               </span>
+            </div>
+          </div>
+        <% end %>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">Fatores Externos</th>
+      <td class="background-green-light">
+        <%= render partial: "inputswotpart", locals: {tipo_do_swotpart: "opportunity", texto_da_acao: "Oportunidade", swot_type: "Oportunidade"} %>
+        <% @opportunities.each do |opportunity| %>
+          <div class="card-swot">
+            <div class="p-b-15">
 
-
-
+              <strong><%= opportunity.name %></strong>
+              <span class="align-right">
+              <%= link_to " ", edit_swotpart_path(opportunity), class: "btn btn-white lnr lnr-pencil" %>
+                <%= link_to " ", opportunity, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
+            </span>
+            </div>
+          </div>
+        <% end %>
+      </td>
+      <td class="background-orange-light">
+        <%= render partial: "inputswotpart", locals: {tipo_do_swotpart: "threat", texto_da_acao: "Ameaça", swot_type: "Ameaça"} %>
+        <% @threats.each do |threat| %>
+          <div class="card-swot">
+            <div class="p-b-15">
+              <strong><%= threat.name %></strong>
+              <span class="align-right">
+              <%= link_to " ", edit_swotpart_path(threat), class: "btn btn-white lnr lnr-pencil" %>
+                <%= link_to " ", threat, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
+               </span>
+            </div>
+          </div>
+        <% end %>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
 
 
 
