--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -6,93 +6,105 @@
 */
 
 .btn {
-    display: inline-block;
-    padding: 9px 12px;
-    padding-top: 7px;
-    margin-bottom: 0;
-    font-size: 14px;
-    line-height: 20px;
-    color: #5e5e5e;
-    text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
-    background-color: #d1dade;
-    -webkit-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    background-image: none !important;
-    border: none;
-    text-shadow: none;
-    box-shadow: none;
-    transition: all 0.12s linear 0s !important;
-    font: 14px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
+  display: inline-block;
+  padding: 9px 12px;
+  padding-top: 7px;
+  margin-bottom: 0;
+  font-size: 14px;
+  line-height: 20px;
+  color: #5e5e5e;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #d1dade;
+  -webkit-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  background-image: none !important;
+  border: none;
+  text-shadow: none;
+  box-shadow: none;
+  transition: all 0.12s linear 0s !important;
+  font: 14px/20px "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 .btn-margin-bottom {
-    margin-bottom: 0.8em;
+  margin-bottom: 0.8em;
 }
+
 .btn-cons {
-    margin-right: 5px;
-    min-width: 120px;
-    margin-bottom: 8px;
+  margin-right: 5px;
+  min-width: 120px;
+  margin-bottom: 8px;
 }
+
 .btn-default {
-    color: #333;
-    background-color: #fff;
-    border-color: #ccc;
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
 }
+
 .btn-success {
-    color: #fff;
-    background-color: #5cb85c;
-    border-color: #4cae4c;
+  color: #fff;
+  background-color: #5cb85c;
+  border-color: #4cae4c;
 }
+
 .btn-info {
-    color: #fff;
-    background-color: #5bc0de;
-    border-color: #46b8da;
+  color: #fff;
+  background-color: #5bc0de;
+  border-color: #46b8da;
 }
+
 .btn-warning {
-    color: #fff;
-    background-color: #f0ad4e;
-    border-color: #eea236;
+  color: #fff;
+  background-color: #f0ad4e;
+  border-color: #eea236;
 }
+
 .btn-danger {
-    color: #fff;
-    background-color: #d9534f;
-    border-color: #d43f3a;
+  color: #fff;
+  background-color: #d9534f;
+  border-color: #d43f3a;
 }
+
 .btn-white {
-    color: #5e5e5e;
-    background-color: #fff;
-    border: 1px solid #e5e9ec;
+  color: #5e5e5e;
+  background-color: #fff;
+  border: 1px solid #e5e9ec;
+  -webkit-text-fill-color: black;
 }
+
 .btn-link, .btn-link:active, .btn-link[disabled], fieldset[disabled] .btn-link {
-    background-color: transparent;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+  background-color: transparent;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
+
 .btn-link, .btn-link:hover, .btn-link:focus, .btn-link:active {
-    border-color: transparent;
+  border-color: transparent;
 }
+
 .btn-link {
-    color: #5e5e5e;
-    background-color: transparent;
-    border: none;
+  color: #5e5e5e;
+  background-color: transparent;
+  border: none;
 }
+
 .btn-link, .btn-link:hover, .btn-link:focus, .btn-link:active {
-    border-color: transparent;
+  border-color: transparent;
 }
+
 .btn-default, .btn-primary, .btn-success, .btn-info, .btn-warning, .btn-danger {
-    text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
-    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.15),0 1px 1px rgba(0,0,0,0.075);
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.15),0 1px 1px rgba(0,0,0,0.075);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
 }
-
-
 
 .btn-primary {
-    color: #ffffff;
-    background-color: #1600BF;
-    border-color: #001AC4;
+  color: #ffffff;
+  background-color: #1600BF;
+  border-color: #001AC4;
 }
 
 .btn-primary:hover,
@@ -100,15 +112,15 @@
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    color: #ffffff;
-    background-color: #001361;
-    border-color: #001AC4;
+  color: #ffffff;
+  background-color: #001361;
+  border-color: #001AC4;
 }
 
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    background-image: none;
+  background-image: none;
 }
 
 .btn-primary.disabled,
@@ -126,19 +138,19 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    background-color: #1600BF;
-    border-color: #001AC4;
+  background-color: #1600BF;
+  border-color: #001AC4;
 }
 
 .btn-primary .badge {
-    color: #1600BF;
-    background-color: #ffffff;
+  color: #1600BF;
+  background-color: #ffffff;
 }
 
 .btn-default {
-    color: #303030;
-    background-color: #E8E8E8;
-    border-color: #B0B0B0;
+  color: #303030;
+  background-color: #E8E8E8;
+  border-color: #B0B0B0;
 }
 
 .btn-default:hover,
@@ -146,15 +158,15 @@ fieldset[disabled] .btn-primary.active {
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-    color: #303030;
-    background-color: #808080;
-    border-color: #B0B0B0;
+  color: #303030;
+  background-color: #808080;
+  border-color: #B0B0B0;
 }
 
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-    background-image: none;
+  background-image: none;
 }
 
 .btn-default.disabled,
@@ -172,20 +184,19 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-    background-color: #E8E8E8;
-    border-color: #B0B0B0;
+  background-color: #E8E8E8;
+  border-color: #B0B0B0;
 }
 
 .btn-default .badge {
-    color: #E8E8E8;
-    background-color: #303030;
+  color: #E8E8E8;
+  background-color: #303030;
 }
 
-
 .btn-default {
-    color: #303030;
-    background-color: #E8E8E8;
-    border-color: #B0B0B0;
+  color: #303030;
+  background-color: #E8E8E8;
+  border-color: #B0B0B0;
 }
 
 .btn-default:hover,
@@ -193,15 +204,15 @@ fieldset[disabled] .btn-default.active {
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-    color: #303030;
-    background-color: #808080;
-    border-color: #B0B0B0;
+  color: #303030;
+  background-color: #808080;
+  border-color: #B0B0B0;
 }
 
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-    background-image: none;
+  background-image: none;
 }
 
 .btn-default.disabled,
@@ -219,11 +230,11 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-    background-color: #E8E8E8;
-    border-color: #B0B0B0;
+  background-color: #E8E8E8;
+  border-color: #B0B0B0;
 }
 
 .btn-default .badge {
-    color: #E8E8E8;
-    background-color: #303030;
+  color: #E8E8E8;
+  background-color: #303030;
 }
