--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -29,7 +29,7 @@
 }
 
 .background-blue-light {
-  background-color: #7CC8F1;
+  background: linear-gradient(180deg, #49a09d, #567a9b);
 }
 
 .background-red {
@@ -41,7 +41,7 @@
 }
 
 .background-red-light {
-  background-color: #ffa47c;
+  background: linear-gradient(180deg, #ffa47c, #c77f67);
 }
 
 .background-green {
@@ -54,7 +54,7 @@
 }
 
 .background-green-light {
-  background-color: #9bd2b0;
+  background: linear-gradient(0deg, #9bd2b0, #6ea080);
 }
 
 .background-orange {
@@ -67,10 +67,14 @@
 }
 
 .background-orange-light {
-  background-color: #FFDB7C;
+  background: linear-gradient(0deg, #ffec76, #a5994c);
 }
 
 
 .background-gray {
-  background-color: #565354;
+  background: #565354;
+}
+
+.background-gray-light {
+  background: #ada9aa;
 }
