--- a/app/views/plans/_inputswotpart.html.erb
+++ b/app/views/plans/_inputswotpart.html.erb
@@ -1,11 +1,16 @@
 <%= form_tag swotparts_path do %>
   <%= hidden_field_tag :partname, tipo_do_swotpart %>
 
-  <div class="input-group mb-3">
-    <%= text_field_tag :name, nil, placeholder: "Digite uma #{swot_type}", class: "form-control" %>
-    <div class="input-group-append">
-      <%= submit_tag texto_da_acao, class: "btn btn-success" %>
-    </div>
+  <div class="field-group-swot m-t-20">
+    <%= text_field_tag :name,
+                       nil,
+                       placeholder: "Adicionar #{texto_da_acao}",
+                       class: "field-add-swot" %>
+    <%= button_tag class: "icon-add-swot" do %>
+      <i class="lnr lnr-arrow-right"></i>
+    <% end %>
   </div>
+
+
 <% end %>
 
