Creating main flow

--- a/app/views/csfs/new.html.erb
+++ b/app/views/csfs/new.html.erb
@@ -19,4 +19,9 @@
   </div>
 
   <%= render partial: "form", locals: {action_text: "Criar"} %>
+  <br/>
+  <div class="justify-buttons">
+    <%= link_to " Voltar para Visão", new_vision_path, class: "btn btn-default lnr lnr-arrow-left" %>
+    <%= link_to " Continuar para Valores", new_value_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
+  </div>
 </div>
