--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -22,7 +22,6 @@
 
   <%= render "form", plan: @plan %>
   <br/>
-  <%= link_to "Voltar", plans_path, class: "btn btn-default" %>
-
+  <%= link_to " Continuar para Missão", new_mission_path, class:"btn btn-primary lnr lnr-arrow-right align-right" %>
 </div>
 
