--- a/app/views/plans/swotedit.html.erb
+++ b/app/views/plans/swotedit.html.erb
@@ -75,6 +75,13 @@
     </tr>
     </tbody>
   </table>
+  <br/>
+  <div>
+
+    <%= link_to " Continuar para Missão", new_mission_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
+
+
+  </div>
 </div>
 
 
