--- a/app/views/spheres/new.html.erb
+++ b/app/views/spheres/new.html.erb
@@ -1,8 +1,15 @@
 <div class="container">
   <h3>Novo Âmbito</h3>
-
+  <% if !current_user.spheres.nil? %>
+    <div class="row">
+      <%= render partial: "spheres/spheres", collection: current_user.spheres %>
+    </div>
+  <% end %>
   <%= render 'form', sphere: @sphere %>
 
   <br/>
-  <%= link_to 'Voltar', spheres_path, class: "btn btn-default" %>
+  <div class="justify-buttons">
+    <%= link_to " Voltar para Papéis", new_role_path, class: "btn btn-default lnr lnr-arrow-left" %>
+    <%= link_to " Continuar para Objetivos Estratégicos", new_objective_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
+  </div>
 </div>
