--- a/app/views/values/new.html.erb
+++ b/app/views/values/new.html.erb
@@ -1,1 +1,16 @@
-<%= render 'form', value: @value %>
+<div class="container">
+  <h3>Meus Valores</h3>
+  <br/>
+
+  <div class="row">
+    <%= render partial: "values/values", collection: @current_plan.values %>
+    <%= render "form", value: @value %>
+    <br/>
+  </div>
+  <div class="row">
+    <div class="justify-buttons">
+      <%= link_to " Voltar para Fatores Críticos de Sucesso", new_csf_path, class: "btn btn-default lnr lnr-arrow-left" %>
+      <%= link_to " Continuar para Papéis", new_role_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
+    </div>
+  </div>
+</div>
