--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -50,7 +50,7 @@
                       <div class="dashed dashed-border">
                         <div class="dashed-content ">
                           <h3 class="lead box-gray-dashed">
-                            <span class="lnr lnr-file-empty"> Nova Missão</span>
+                            <span class="lnr lnr-cog"> Missão</span>
                           </h3>
                         </div>
                       </div>
@@ -88,7 +88,7 @@
                       <div class="dashed dashed-border">
                         <div class="dashed-content ">
                           <h3 class="lead box-gray-dashed">
-                            <span class="lnr lnr-file-empty"> Nova Visão</span>
+                            <span class="lnr lnr-cog"> Visão</span>
                           </h3>
                         </div>
                       </div>
@@ -134,7 +134,7 @@
                       <div class="dashed dashed-border">
                         <div class="dashed-content ">
                           <h3 class="lead box-gray-dashed">
-                            <span class="lnr lnr-file-empty"> Novo Fator Crítico de Sucesso</span>
+                            <span class="lnr lnr-cog"> Fator Crítico de Sucesso</span>
                           </h3>
                         </div>
                       </div>
@@ -177,7 +177,7 @@
             <% if !current_user.spheres.nil? %>
               <div class="row">
                 <%= render partial: "spheres/spheres", collection: @spheres %>
-                <%= link_to spheres_path do %>
+                <%= link_to new_sphere_path do %>
                   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
                     <div class="dashed dashed-border">
                       <div class="dashed-content ">
@@ -203,7 +203,7 @@
 
               <div class="row">
                 <%= link_to new_objective_path do %>
-                  <div class="col-xs-10 p-t-10">
+                  <div class="col-xs-12 p-t-10">
                     <div class="dashed dashed-border">
                       <div class="dashed-content ">
                         <h3 class="lead box-gray-dashed">
