--- a/app/views/spheres/_spheres.html.erb
+++ b/app/views/spheres/_spheres.html.erb
@@ -1,19 +1,23 @@
 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
-<%= link_to sphereobjectives_path(sphere_id: spheres.id) do %>
-  <div class="offer offer-radius offer-primary">
-    <div class="shape">
-      <div class="shape-text">
+  <%= link_to sphereobjectives_path(sphere_id: spheres.id) do %>
+    <div class="offer offer-radius offer-primary">
+      <div class="shape">
+        <div class="shape-text">
+        </div>
+      </div>
+      <div class="offer-content">
+        <h3 class="lead color-dark">
+          <%= spheres.name %>
+        </h3>
+        <%= link_to " ",
+                    edit_sphere_path(spheres),
+                    class: "btn btn-default lnr lnr-pencil" %>
+        <%= link_to " ",
+                    spheres,
+                    method: :delete,
+                    data: {confirm: "Tem certeza que deseja remover o âmbito #{spheres.name}? Ao remover, tambem serão excluidos todos os objetivos estratégicos relacionados ao mesmo."},
+                    class: "btn btn-danger lnr lnr-circle-minus" %>
       </div>
     </div>
-    <div class="offer-content">
-      <h3 class="lead color-dark">
-        <%= spheres.name %>
-        <%= spheres.progress %>
-      </h3>
-      <p>
-        Ver Objetivos
-      </p>
-    </div>
-  </div>
-<% end %>
+  <% end %>
 </div>
