--- a/app/views/visions/new.html.erb
+++ b/app/views/visions/new.html.erb
@@ -19,4 +19,9 @@
   </div>
 
   <%= render partial: "form", locals: {texto_da_acao: "Criar"} %>
+  <br/>
+  <div class="justify-buttons">
+    <%= link_to " Voltar para Missão", new_mission_path, class: "btn btn-default lnr lnr-arrow-left" %>
+    <%= link_to " Continuar para Fatores Críticos de Sucesso", new_csf_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
+  </div>
 </div>
