--- a/app/assets/stylesheets/theme/templatemo-style.scss
+++ b/app/assets/stylesheets/theme/templatemo-style.scss
@@ -249,6 +249,7 @@ header .social-icon li a {
 }
 
 #home .btn {
+  border: 1px solid #ccc;
   background: transparent;
   border-radius: 2px;
   color: #fff;
