--- a/app/views/values/_form.html.erb
+++ b/app/views/values/_form.html.erb
@@ -6,7 +6,7 @@
 
 <%= form_for @value do |form| %>
   <div class="search-group-1 m-t-33">
-    <%= form.text_field :name, class: "search-field-1" %>
+    <%= form.text_field :name, placeholder: "Insira um valor", class: "search-field-1" %>
     <%= button_tag class: "icon-1" do %>
       <i class="lnr lnr-arrow-right"></i>
     <% end %>
