--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -1,18 +1,23 @@
 <div class="container">
   <div class="wrap-collabsible p-t-60 p-b-20">
-    <input id="collapsible" class="toggle" type="checkbox" style="display: none">
-    <label for="collapsible" class="lbl-toggle">EXEMPLOS MISSÃO</label>
+    <input id="collapsible" class="toggle" type="checkbox" style="display: none" checked>
+    <label for="collapsible" class="lbl-toggle">MISSÃO</label>
     <div class="collapsible-content">
       <div class="content-inner">
         <div class="content-text p-b-10">
-          Exemplos de nomes para um plano:
+          Uma missão define com mais profundidade características pessoais.
+          Elaborar uma missão ajuda em dar um caminho para a vida, por isso pode ser uma tarefa difícil.
           <br/>
           <br/>
-          O melhor plano<br/>
-          Meu plano<br/>
-          Plano infalível<br/>
-          A minha vida<br/>
-          Plano A
+          Exemplo de missão de Rogério, casado, e pai de duas crianças:
+          <br/>
+          <strong>Quem sou eu? </strong>
+          Eu sou uma pessoa amigável, tranquila, trabalho e tento dar o meu melhor para cuidar dos meus filhos.
+          <br/>
+          <strong>Por que existo? </strong>
+          Eu existo pois acredito que Deus tenha um objetivo para cada um de nós na terra.
+          <br/>
+          <strong>Qual o meu propósito de vida? </strong> Meu propósito de vida é ajudar os outros.
         </div>
       </div>
     </div>
