--- a/app/views/values/new.html.erb
+++ b/app/views/values/new.html.erb
@@ -1,4 +1,23 @@
 <div class="container">
+  <div class="wrap-collabsible p-t-60 p-b-20">
+    <input id="collapsible" class="toggle" type="checkbox" style="display: none" checked>
+    <label for="collapsible" class="lbl-toggle">VALORES</label>
+    <div class="collapsible-content">
+      <div class="content-inner">
+        <div class="content-text p-b-10">
+          Valores os princípios éticos que norteiam uma pessoa.
+          <br/>
+          <br/>
+          Exemplo de Valor:
+          <br/>
+          <br/>
+          <strong></strong>
+          <br/>
+
+        </div>
+      </div>
+    </div>
+  </div>
   <h3>Meus Valores</h3>
   <br/>
 
