--- a/app/views/visions/_form.html.erb
+++ b/app/views/visions/_form.html.erb
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="form-group">
-        <%= form.label "Para onde vou?" %>
+        <%= form.label "Para onde eu vou?" %>
         <%= form.text_area :where_im_going, class:"form-control" %>
       </div>
     </div>
@@ -24,7 +24,7 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="form-group">
-        <%= form.label "Como tornarei concreta a minha missão?" %>
+        <%= form.label "Como posso fazer para tornar concreta a minha missão?" %>
         <%= form.text_area :how_complete_mission, class:"form-control" %>
       </div>
     </div>
