--- a/app/views/visions/new.html.erb
+++ b/app/views/visions/new.html.erb
@@ -1,18 +1,24 @@
 <div class="container">
   <div class="wrap-collabsible p-t-60 p-b-20">
-    <input id="collapsible" class="toggle" type="checkbox" style="display: none">
-    <label for="collapsible" class="lbl-toggle">EXEMPLOS VISÂO</label>
+    <input id="collapsible" class="toggle" type="checkbox" style="display: none" checked>
+    <label for="collapsible" class="lbl-toggle">VISÂO</label>
     <div class="collapsible-content">
       <div class="content-inner">
         <div class="content-text p-b-10">
-          Exemplos de nomes para um plano:
+          Uma visão mostra onde quer chegar, para onde vai em um determinado período de tempo.
           <br/>
           <br/>
-          O melhor plano<br/>
-          Meu plano<br/>
-          Plano infalível<br/>
-          A minha vida<br/>
-          Plano A
+          Exemplo de visão de Ronaldo, futuro jogador de futebol profissional:
+          <br/>
+          <strong>Para onde eu vou? </strong>
+          Vou para uma cidade com mais times de futebol, com mais oportunidades.
+
+          <br/>
+          <strong>Onde quero chegar? </strong>
+          Em três anos quero conseguir entrar para um time de futebol, ter meu salário, uma namorada e um carro.
+          <br/>
+          <strong>Como posso fazer para tornar concreta a minha missão? </strong>
+          Continuar treinando, participando de campeonatos em minha cidade para ser visto.
         </div>
       </div>
     </div>
