--- a/app/views/csfs/new.html.erb
+++ b/app/views/csfs/new.html.erb
@@ -1,18 +1,23 @@
 <div class="container">
   <div class="wrap-collabsible p-t-60 p-b-20">
-    <input id="collapsible" class="toggle" type="checkbox" style="display: none">
-    <label for="collapsible" class="lbl-toggle">EXEMPLOS FATORES CRÍTICOS DE SUCESSO</label>
+    <input id="collapsible" class="toggle" type="checkbox" style="display: none" checked>
+    <label for="collapsible" class="lbl-toggle">FATORES CRÍTICOS DE SUCESSO</label>
     <div class="collapsible-content">
       <div class="content-inner">
         <div class="content-text p-b-10">
-          Exemplos de nomes para um plano:
+          Visão os princípios éticos que norteiam uma pessoa.
           <br/>
           <br/>
-          O melhor plano<br/>
-          Meu plano<br/>
-          Plano infalível<br/>
-          A minha vida<br/>
-          Plano A
+          Exemplo de Visão:
+          <br/>
+          <br/>
+          <strong>Que características me tornam único? </strong>
+          <br/>
+          <strong>Quais minhas melhores competências? </strong>
+          <br/>
+          <strong>Quais delas são essenciais para meus objetivos? </strong>
+          <br/>
+          <strong>Quais fatores impactam no meu bem estar? </strong>
         </div>
       </div>
     </div>
