--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -5,7 +5,7 @@
   <%= render "form", value: @role %>
   <br/>
   <div class="justify-buttons">
-    <%= link_to " Voltar para Papéis", new_role_path, class: "btn btn-default lnr lnr-arrow-left" %>
+    <%= link_to " Voltar para Valores", new_value_path, class: "btn btn-default lnr lnr-arrow-left" %>
     <%= link_to " Continuar para Âmbitos", new_sphere_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
   </div>
 </div>
