Cleaning unused assets

--- a/app/assets/stylesheets/blogcard.scss
+++ b/app/assets/stylesheets/blogcard.scss
@@ -73,20 +73,20 @@ $color_grey_dark: #a2a2a2;
       display: inline-block;
     }
     .author:before {
-      font-family: FontAwesome;
+      font-family: Raleway-Black;
       margin-right: 10px;
       content: "\f007";
     }
 
     .date:before {
-      font-family: FontAwesome;
+      font-family: Raleway-Black;
       margin-right: 10px;
       content: "\f133";
     }
 
     .tags {
       ul:before {
-        font-family: FontAwesome;
+        font-family: Raleway-Black;
         content: "\f02b";
         margin-right: 10px;
       }
