Remove autocompletes and gitignore to public assets

--- a/app/views/csfs/_form.html.erb
+++ b/app/views/csfs/_form.html.erb
@@ -9,7 +9,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <%= form.label "Que características me tornam único?" %>
-        <%= form.text_area :what_makes_me_unique, class:"form-control"  %>
+        <%= form.text_area :what_makes_me_unique, autocomplete:"off", class:"form-control resize-none"  %>
       </div>
     </div>
   </div>
@@ -18,7 +18,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <%= form.label "Quais minhas melhores competências?" %>
-        <%= form.text_area :best_attributes, class:"form-control"  %>
+        <%= form.text_area :best_attributes, autocomplete:"off", class:"form-control resize-none"  %>
       </div>
     </div>
   </div>
@@ -27,7 +27,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <%= form.label "Quais delas são essenciais para meus objetivos?" %>
-        <%= form.text_area :essential_atributes, class:"form-control"  %>
+        <%= form.text_area :essential_atributes, autocomplete:"off", class:"form-control resize-none"  %>
       </div>
     </div>
   </div>
@@ -36,7 +36,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <%= form.label "Quais fatores impactam no meu bem estar?" %>
-        <%= form.text_area :health_factors, class:"form-control"  %>
+        <%= form.text_area :health_factors, autocomplete:"off", class:"form-control resize-none"  %>
       </div>
     </div>
   </div>
