--- a/app/views/missions/_form.html.erb
+++ b/app/views/missions/_form.html.erb
@@ -9,7 +9,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <%= form.label "Quem sou eu?" %>
-        <%= form.text_area :who_am_i, class:"form-control", rows: 4 %>
+        <%= form.text_area :who_am_i, autocomplete: "off", class:"form-control resize-none", rows: 4 %>
       </div>
     </div>
   </div>
@@ -18,7 +18,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <%= form.label "Por que eu existo?" %>
-        <%= form.text_field :why_exist, class:"form-control" %>
+        <%= form.text_field :why_exist, autocomplete: "off", class:"form-control" %>
       </div>
     </div>
   </div>
@@ -27,7 +27,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <%= form.label "Qual o meu propósito de vida?" %>
-        <%= form.text_field :purpose_of_life, class:"form-control" %>
+        <%= form.text_field :purpose_of_life, autocomplete: "off", class:"form-control" %>
       </div>
     </div>
   </div>
