--- a/app/views/plans/_inputswotpart.html.erb
+++ b/app/views/plans/_inputswotpart.html.erb
@@ -4,6 +4,7 @@
   <div class="field-group-swot m-t-20">
     <%= text_field_tag :name,
                        nil,
+                       autocomplete: "off",
                        placeholder: "Adicionar #{texto_da_acao}",
                        class: "field-add-swot" %>
     <%= button_tag class: "icon-add-swot" do %>
