--- a/app/views/spheres/_form.html.erb
+++ b/app/views/spheres/_form.html.erb
@@ -10,7 +10,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <%= form.label "Nome" %>
-        <%= form.text_field :name, class: "form-control" %>
+        <%= form.text_field :name, autocomplete: "off",  class: "form-control" %>
       </div>
     </div>
   </div>
