--- a/app/views/swotparts/_form.html.erb
+++ b/app/views/swotparts/_form.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= form.label "Descrição" %>
-    <%= form.text_field :name, class:"form-control" %>
+    <%= form.text_field :name, autocomplete: "off", class:"form-control" %>
   </div>
 
   <br/>
