--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -9,7 +9,7 @@
     <div class="col-sm-6">
       <div class="form-group">
         <%= form.label "Título da atividade" %>
-        <%= form.text_field :title, class:"form-control" %>
+        <%= form.text_field :title, autocomplete: "off", class:"form-control" %>
       </div>
     </div>
   </div>
