--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
         <% end %>
 
         <div class="wrap-input100 validate-input m-b-16" data-validate="Valid email is required: ex@abc.xyz">
-          <%= form.email_field :email, placeholder: "Email", autofocus: true, autocomplete: "email", class: "input100" %>
+          <%= form.email_field :email, autocomplete: "off", placeholder: "Email", autofocus: true, class: "input100" %>
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<span class="lnr lnr-envelope"></span>
@@ -18,7 +18,7 @@
         </div>
 
         <div class="wrap-input100 validate-input m-b-16" data-validate="Name is required">
-          <%= form.text_field :name, placeholder: "Nome", autocomplete: "name", class: "input100" %>
+          <%= form.text_field :name, autocomplete: "off", placeholder: "Nome", class: "input100" %>
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<span class="lnr lnr-user"></span>
