--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -9,7 +9,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <%= form.label :name %>
-        <%= form.text_field :name, class: "form-control" %>
+        <%= form.text_field :name, autocomplete: "off",  class: "form-control" %>
       </div>
     </div>
   </div>
