Main screen sequence update

--- a/app/views/csfs/new.html.erb
+++ b/app/views/csfs/new.html.erb
@@ -26,7 +26,7 @@
   <%= render partial: "form", locals: {action_text: "Criar"} %>
   <br/>
   <div class="justify-buttons">
-    <%= link_to " Voltar para Visão", new_vision_path, class: "btn btn-default lnr lnr-arrow-left" %>
-    <%= link_to " Continuar para Valores", new_value_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
+    <%= link_to " Voltar para Papéis", new_role_path, class: "btn btn-default lnr lnr-arrow-left" %>
+    <%= link_to " Continuar para Âmbitos", new_sphere_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
   </div>
 </div>
