--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -100,17 +100,17 @@
         <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">Funcionalidades do <span>LTR</span></h2>
       </div>
       <div class="col-md-4 active wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
-        <i class="fa fa-laptop"></i>
+        <i class="lnr lnr-layers color-white"></i>
         <h4>Diferentes planos</h4>
 
       </div>
       <div class="col-md-4 active wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">
-        <i class="fa fa-cloud"></i>
-        <h4>Matriz SWOT</h4>
+        <i class="lnr lnr-file-add color-white"></i>
+        <h4>Análise Ambitental - Matriz SWOT</h4>
 
       </div>
       <div class="col-md-4 active wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
-        <i class="fa fa-cog"></i>
+        <i class="lnr lnr-pushpin color-white"></i>
         <h4>Objetivos Estratégicos</h4>
 
       </div>
