--- a/app/views/spheres/new.html.erb
+++ b/app/views/spheres/new.html.erb
@@ -9,7 +9,7 @@
 
   <br/>
   <div class="justify-buttons">
-    <%= link_to " Voltar para Papéis", new_role_path, class: "btn btn-default lnr lnr-arrow-left" %>
+    <%= link_to " Voltar para Fatores Críticos de Sucesso", new_csf_path, class: "btn btn-default lnr lnr-arrow-left" %>
     <%= link_to " Continuar para Objetivos Estratégicos", new_objective_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
   </div>
 </div>
