--- a/app/views/values/new.html.erb
+++ b/app/views/values/new.html.erb
@@ -28,7 +28,7 @@
   </div>
   <div class="row">
     <div class="justify-buttons">
-      <%= link_to " Voltar para Fatores Críticos de Sucesso", new_csf_path, class: "btn btn-default lnr lnr-arrow-left" %>
+      <%= link_to " Voltar para Visão", new_vision_path, class: "btn btn-default lnr lnr-arrow-left" %>
       <%= link_to " Continuar para Papéis", new_role_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
     </div>
   </div>
